Making template code more generic

--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -315,7 +315,7 @@
 						<span>' + comment['creation_date'] + '</span>\
 						<small>by</small> ' + comment['user_name'] + '\
 						<span class="separator"></span>\
-						<a href="/posts/news/' + comment['post_uuid'] + '/#comment-' + comment['comment_id'] + '"><i class="fa fa-link"></i></a>\
+						<a href="' + comment['post_url'] + '#comment-' + comment['comment_id'] + '"><i class="fa fa-link"></i></a>\
 					</div>\
 				</div>\
 			</div> \
