--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block page_title %}Home{% endblock %} - Blender Today - Community-driven Blender News</title>
+    <title>{% block page_title %}{% endblock %}Blender Today - Community-driven Blender News</title>
     <meta name="keywords" content="news, community, blender, animation, 3d" />
     <meta name="description" content="Community-driven Blender News"/>
     <meta name="author" content="Blender Today"/>
