--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -63,14 +63,18 @@
 				<div class="col-md-1 col-sm-1 col-xs-2">
 					<div class="post-view-details-avatar">
 						<img class="img-circle" src="{{post.user.gravatar()}}" title="{{post.user.first_name}} {{post.user.last_name}}">
-						{% if post.user.has_role('network_member') %}
-						<div class="post-view-details-avatar-label">
-							{% if post.user.has_role('bfct_trainer') %}
-								<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
-							{% else %}
-								<i class="network_member bf-network" title="Blender Network Member"></i>
-							{% endif %}
-						</div>
+						{% if post.user.has_role('dev_core') %}
+							<div class="post-view-details-avatar-label">
+								<i class="dev_core bf-blender" title="Blender Core Developer"></i>
+							</div>
+						{% elif post.user.has_role('network_member') %}
+							<div class="post-view-details-avatar-label">
+								{% if post.user.has_role('bfct_trainer') %}
+									<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
+								{% else %}
+									<i class="network_member bf-network" title="Blender Network Member"></i>
+								{% endif %}
+							</div>
 						{% endif %}
 					</div>
 				</div>
@@ -111,11 +115,14 @@
 							{% endif %}
 						</span>
 						<span class="author-roles">
+							{% if post.user.has_role('dev_core') %}
+								<i class="bf-blender"></i> Blender Core Developer<br/>
+							{% endif %}
 							{% if post.user.has_role('network_member') %}
-								Blender Network Member<br/>
+								<i class="bf-network"></i> Blender Network Member<br/>
 							{% endif %}
 							{% if post.user.has_role('bfct_trainer') %}
-								Blender Foundation Certified Trainer
+								<i class="fa fa-graduation-cap"></i> Blender Foundation Certified Trainer
 							{% endif %}	
 						</span>
 						<span class="meta">
