URL validation on submit

--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -66,8 +66,9 @@
 				<div class="form-group">
 					<label>URL (with http://)</label>
 					{{ submit_post_form.url(
-						 class='form-control post-submit-field-url',
-						 placeholder='URL including http:// . e.g: "http://gooseberry.blender.org"') }}
+						type='url',
+						class='form-control post-submit-field-url',
+						placeholder='URL including http:// . e.g: "http://gooseberry.blender.org"') }}
 				</div>
 			</div>
 		</div>
