Some tweaks to the forms in mobile

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1285,6 +1285,20 @@ li.navbar-submit a:focus,
 	& a
 		color: white
 
+	+media-xs
+		font-size: 0.8em
+		width: 95% !important
+		max-width: auto
+		height: auto
+		padding: 1em
+	+media-sm
+		font-size: 0.8em
+		width: 95% !important
+		max-width: auto
+		height: auto
+		padding: 1em
+
+
 .dialog__button-close
 	position: absolute
 	top: -15px
