--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -11,7 +11,7 @@
 		</div>
 
 		<div class="row post-submit-field-type">
-			<div class="col-md-6">
+			<div class="col-md-6 col-sm-6 col-xs-6">
 				<a data-role="button" data-val="1" class="select-change post-submit-field-type-button">
 					<div class="post-submit-field-type-button-icon">
 						<span class="fa-stack fa-2x fa-lg">
@@ -23,11 +23,11 @@
 						Submit Link
 					</div>
 					<div class="post-submit-field-type-button-description">
-						No text, I just want to link somewhere
+						No text, I just want to link 
 					</div>
 				</a>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-sm-6 col-xs-6">
 				<a data-role="button" data-val="2" class="select-change post-submit-field-type-button">
 					<div class="post-submit-field-type-button-icon">
 						<span class="fa-stack fa-2x fa-lg">
