Trying a thing for mobile

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1247,7 +1247,8 @@ li.navbar-submit a:focus,
 	left: 0
 
 .dialog
-	position: fixed
+	position: absolute
+	overflow: scroll
 	display: -webkit-flex
 	display: flex
 	-webkit-align-items: center
