--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -23,7 +23,7 @@
 	</h3>
 		{% for post in posts.items %}
 		<div class="row post-index-item {{ loop.cycle('odd', 'even') }}">
-			<div class="col-md-2 col-sm-2 col-xs-2">
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
 
 				{# Post Rating #}
 				<div class="post-index-item-rate{% if current_user.is_anonymous() %} popover-vote{% endif %}" title="{{post.rating.positive}} Upvotes, {{post.rating.negative}} Downvotes" {% if current_user.is_anonymous() %} data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Please login to vote" {% endif %}>
@@ -37,7 +37,8 @@
 				</div>
 
 				{# Post circle thingie #}
-				<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
+				<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}"
+					 class="hidden-xs">
 					<div class="post-index-item-type {{post.post_type.url}}" {% if post.picture %}style="background: url({{post.thumbnail('s')}}) top left no-repeat"{% endif %}>
 						{% if post.post_type.url == 'link' %}
 							<i class="fa fa-link"></i>
@@ -49,7 +50,7 @@
 
 			</div>
 
-			<div class="col-md-10 col-sm-10 col-xs-10">
+			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-11">
 
 				<a class="post-index-item-title"
 					href="{% if post.post_type.url == 'link' %}{{post.content}}{% else %}{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}{% endif %}"
