--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -1,47 +1,3 @@
-    <div class="navbar navbar-default" role="navigation">
-
-        <nav>
-          <ul class="nav navbar-nav">
-
-            <li data-dialog="submit"
-                class="navbar-submit{% if current_user.is_anonymous() %} popover-submit{% endif %}"
-                {% if current_user.is_anonymous() %}
-                 data-toggle="popover" data-trigger="hover" data-placement="bottom"
-                 data-content="Sign in to Submit"
-                {% endif %}>
-              <a>Submit</a>
-            </li>
-
-            {% if current_user.is_authenticated() %}
-
-              <li>
-                <a href="#" title="{{current_user.email}}">
-                  <i class="fa fa-male"></i>
-                </a>
-              </li>
-
-              <li><a href="{{url_for('settings.profile')}}"><i class="fa fa-cog"></i></a></li>
-
-              {% if current_user.has_role('admin') %}
-              <li>
-                <a href="{{url_for('admin.index')}}"><i class="fa fa-fighter-jet"></i></a>
-              </li>
-              {% endif %}
-
-              <li>
-                <a class="nav-logout-widget" href="">
-                  <span class="nav-logout-widget-icon"><i class="fa fa-power-off"></i></span>
-                  <span class="nav-logout-widget-question">?</span>
-                </a>
-              </li>
-            {% else %}
-            <li class="absolute right"><a href="{{url_for_security('login')}}"><i class="fa fa-sign-in"></i> Sign in</a></li>
-            {% endif %}
-          </ul>
-        </nav>
-
-    </div>
-
 	<div class="nav-sidebar branding">
 		<a href="{{url_for('index')}}">
 			<img class="nav-sidebar-mug" src="{{url_for('static', filename='images/today_manumug_150x150.jpg')}}"/>
@@ -50,4 +6,54 @@
 		<p>
 			You decide what makes the news
 		</p>
+	</div>
+
+	<div class="nav-sidebar navigation" role="navigation">
+		<nav>
+			<ul>
+
+				<li data-dialog="submit"
+						class="navbar-submit{% if current_user.is_anonymous() %} popover-submit{% endif %}"
+						{% if current_user.is_anonymous() %}
+						 data-toggle="popover" data-trigger="hover" data-placement="bottom"
+						 data-content="Sign in to Submit"
+						{% endif %}>
+					<a>Submit</a>
+				</li>
+
+				{% if current_user.is_authenticated() %}
+
+					<li>
+						<a href="#" title="{{current_user.email}}">
+							<i class="fa fa-male"></i>
+						</a>
+					</li>
+
+					<li>
+							<a href="{{url_for('settings.profile')}}" id="popover-settings"
+								 data-toggle="popover" data-trigger="hover" data-placement="bottom"
+								 data-content="Settings">
+								 <i class="fa fa-cog"></i>
+							</a>
+					</li>
+
+					{% if current_user.has_role('admin') %}
+					<li>
+						<a href="{{url_for('admin.index')}}"><i class="fa fa-fighter-jet"></i></a>
+					</li>
+					{% endif %}
+
+					<li>
+						<a class="nav-logout-widget" href="" id="popover-logout"
+							 data-toggle="popover" data-trigger="hover" data-placement="bottom"
+							 data-content="Log out">
+							<span class="nav-logout-widget-icon"><i class="fa fa-power-off"></i></span>
+							<span class="nav-logout-widget-question">?</span>
+						</a>
+					</li>
+				{% else %}
+				<li class="absolute right"><a href="{{url_for_security('login')}}"><i class="fa fa-sign-in"></i> Sign in</a></li>
+				{% endif %}
+			</ul>
+		</nav>
 	</div>
