--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -182,6 +182,9 @@
           };
         });
 
+        $('#popover-settings').popover();
+        $('#popover-logout').popover();
+
       {% endif %}
     </script>
 
