--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -8,6 +8,7 @@
 
 {% block body %}
 
+{# Heavy caching starts here #}
 {% cache 60*5, 'post_list', category_url, page, user_string_id %}
 <div class="row">
 	<div class="col-md-9 post-index">
@@ -135,6 +136,7 @@
 </div>
 
 {% endcache %}
+{# Heavy caching ends here #}
 
 {% endblock %}
 
