Uglify JS with Grunt

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -50,15 +50,20 @@ a
 	background-color: lighten($color_text, 60%)
 	vertical-align: middle
 
-/* TEMP */
-a.logo
-	margin-top: 8px
-	padding-top: 6px
-	display: block
-	font-size: 1.2em
-	font-family: $font_headings
-	& i
-		opacity: 0.2
+/* Branding */
+.today-minimug
+	background: top left no-repeat transparent
+	width: 40px
+	height: 40px
+	padding: 0
+	margin: 0 10px 0 0 
+	display: inline-block
+	position: relative
+	float: left
+	top: 15px
+	cursor: pointer
+	&:hover
+		opacity: 0.9
 
 /* Navbar */
 .navbar
