--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -86,10 +86,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
-    {% else %}
-    <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     {% endif %}
 
     <script type="text/javascript">
@@ -105,86 +101,14 @@
       });
     </script>
 
-    <script src="{{url_for('static', filename='js/dialogFx.js')}}"></script>
-    <script src="{{url_for('static', filename='js/classie.js')}}"></script>
+    <script src="{{url_for('static', filename='js/theuniverse.min.js')}}"></script>
     <script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
     <script type="text/javascript">
       {% if current_user.is_anonymous() %}
         $('.popover-submit').popover();
       {% else %}
-        var csrftoken = $('meta[name=csrf-token]').attr('content');
-
-        $.ajaxSetup({
-          beforeSend: function(xhr, settings) {
-            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-              xhr.setRequestHeader("X-CSRFToken", csrftoken)
-            }
-          }
-        });
-
-        $("#submit_post_form").on("submit", function (e) {
-            e.preventDefault();
-            $('.post-submit-field-submit').html('<i class="fa fa-spinner fa-spin"></i> <i>Submitting...</i>');
-            var data = $(this).serialize();
-            url = $(this).attr('action');
-            var formData = new FormData($(this)[0]);
-            $.ajax({
-                  url: url,
-                  type: 'POST',
-                  data: formData,
-                  processData: false,
-                  contentType: false,
-                  cache: false
-                })
-            .done(function(data){
-                console.log(data['post_url']);
-                window.location.replace(data['post_url']);
-            })
-            .fail(function(data){
-              console.log('We have a problem.');
-            });
-        });
-
-        (function() {
-          var dlgtrigger = document.querySelector( '[data-dialog]' ),
-            somedialog = document.getElementById( dlgtrigger.getAttribute( 'data-dialog' ) ),
-            dlg = new DialogFx( somedialog );
-          dlgtrigger.addEventListener( 'click', dlg.toggle.bind(dlg) );
-        })();
-
-        CKEDITOR.replace( 'post_content', {
-          removePlugins: 'elementspath',
-          resize_enabled: false
-        });
-        CKEDITOR.config.forcePasteAsPlainText = true;
-        CKEDITOR.instances['post_content'].on('change', function() { CKEDITOR.instances['post_content'].updateElement() });
-
-        $('.select-change').click(function(){
-          $('#post_type_id').val($(this).data('val'));
-          $('.select-change').each(function() {
-            $(this).removeClass('activato');
-          });
-
-          $(this).addClass('activato');
-
-          $('.post-submit-div-title').show();
-          $('.post-submit-div-category').show();
-          $('.post-submit-div-picture').show();
-          $('.post-submit-div-submit').show();
-
-          if ($('#post_type_id').val() == 1){
-            $('.post-submit-link').show();
-            $('.post-submit-article').hide();
-          };
-          if ($('#post_type_id').val() == 2){
-            $('.post-submit-link').hide();
-            $('.post-submit-article').show();
-          };
-        });
-
         $('#popover-settings').popover();
         $('#popover-logout').popover();
-
       {% endif %}
     </script>
 
