--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -12,7 +12,11 @@
 {% cache 60*5, 'post_list', category_url, page, user_string_id %}
 <div class="row">
 	<div class="col-md-9 post-index">
-	<h3>{% if title == 'index_category' %}
+		<a href="{{url_for('posts.index')}}">
+			<div class="today-minimug" style="background-image: url({{url_for('static', filename='images/today_manumug_40x40.png')}})"></div>
+		</a>
+	<h3>
+		{% if title == 'index_category' %}
 			<a href="{{url_for('posts.index')}}">All</a>
 			<strong>·</strong>
 			<a href="{{url_for('posts.index_category', category=category.url)}}">{{category.name}}</a>
