--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -33,7 +33,7 @@
 					</li>
 					{% endif %}
 
-					<li>
+					<li class="navbar-logout">
 						<a class="nav-logout-widget" href="" id="popover-logout"
 							 data-toggle="popover" data-trigger="hover" data-placement="bottom"
 							 data-content="Log out">
