--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -87,12 +87,12 @@ a
 	margin-bottom: 0
 	+border-radius(0)
 
-.post-view-container .breadcrumb
-	padding: 12px 15px
+.post-view-container
+	margin-top: 15px
 
 /* post-index */
 .post-index, .post-view
-	margin-top: 15px
+	margin-top: 25px
 
 .post-index-item
 	display: block
