Ignore the universe, added categories pulldown

--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -110,6 +110,13 @@
         $('#popover-settings').popover();
         $('#popover-logout').popover();
       {% endif %}
+
+      $( function() {
+        $( '#cd-dropdown' ).dropdown( {
+          gutter : 5
+        } );
+      });
+
     </script>
 
   {% block footer_scripts %}
