--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -94,6 +94,10 @@ a
 .post-index, .post-view
 	margin-top: 25px
 
+.post-index h4
+	position: relative
+	top: -10px
+
 .post-index-item
 	display: block
 	background-color: white
@@ -1487,3 +1491,109 @@ a.cke_button_on, a.cke_button_on:hover, a.cke_button_on:focus, a.cke_button_on:a
 	border-bottom: 2px solid $color_brand_secondary !important
 	color: white !important
 	+box-shadow-none
+
+
+.cd-dropdown,
+.cd-select
+	float: right
+	position: relative
+	width: 250px
+	display: inline-block
+	top: -10px
+
+
+.cd-dropdown > span
+	width: 100%
+	height: 40px
+	line-height: 40px
+	color: #999
+	font-weight: 700
+	font-size: 16px
+	background: #fff
+	display: block
+	padding: 0 50px 0 15px
+	position: relative
+	cursor: pointer
+	font-family: $font_headings
+	border: thin solid darken($color_background, 3%)
+	+border-radius(3px)
+	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+
+.cd-dropdown > span:after
+	content: '\f107'
+	font-family: 'FontAwesome'
+	position: absolute
+	right: 15px
+	+transition(transform, 0.3s, ease)
+
+.cd-dropdown.cd-active > span:after
+	transform: rotate(180deg)
+	-webkit-transform: rotate(180deg)
+
+.cd-dropdown ul
+	list-style-type: none
+	margin: 0
+	padding: 0
+	display: block
+	position: relative
+
+.cd-dropdown ul li
+	display: block
+
+.cd-dropdown ul li span 
+	width: 100%
+	background: transparent
+	color: transparent
+	line-height: 40px
+	padding: 0 0 0 15px
+	display: block
+	cursor: pointer
+	border: thin solid transparent
+	+border-radius(3px)
+
+.cd-dropdown > span,
+.cd-dropdown ul li span
+	-webkit-backface-visibility: hidden
+	-webkit-touch-callout: none
+	-webkit-user-select: none
+	-khtml-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
+	user-select: none
+
+/* Select fallback styling */
+.cd-select
+	border: 1px solid #ddd
+
+/* Style 1 */
+.cd-dropdown ul
+	position: absolute
+	top: 0px
+	width: 100%
+
+.cd-dropdown ul li
+	position: absolute
+	width: 100%
+
+.cd-active.cd-dropdown > span
+	color: $color_brand_secondary !important
+	background-color: white !important
+
+.cd-active.cd-dropdown > span,
+.cd-active.cd-dropdown ul li span
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1)
+	background-color: $color_background
+	color: $color_brand_main
+	border: thin solid darken($color_background, 3%)
+
+.cd-active.cd-dropdown ul li span
+	-webkit-transition: all 0.0.1s linear 0s
+	-moz-transition: all 0.1s linear 0s
+	-ms-transition: all 0.1s linear 0s
+	-o-transition: all 0.1s linear 0s
+	transition: all 0.1s linear 0s
+
+
+.cd-active.cd-dropdown ul li span:hover
+	background: white
+	color: $color_brand_secondary
