--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -12,16 +12,29 @@
 {% cache 60*5, 'post_list', category_url, page, user_string_id %}
 <div class="row">
 	<div class="col-md-9 post-index">
-		<h4>
-			{% if title == 'index_category' %}
-				<a href="{{url_for('posts.index')}}">Home</a>
-				<strong>·</strong>
-				<a href="{{url_for('posts.index_category', category=category.url)}}">{{category.name}}</a>
-			{% else %}
-				<a href="{{url_for('posts.index')}}">Home</a>
-			{% endif %}
-				<span class="badge">({{posts.items|length}})</span>
-		</h4>
+		<div class="row">
+			<div class="col-md-6">
+				<h4>
+					{% if title == 'index_category' %}
+						<a href="{{url_for('posts.index')}}">Home</a>
+						<strong>·</strong>
+						<a href="{{url_for('posts.index_category', category=category.url)}}">{{category.name}}</a>
+					{% else %}
+						<a href="{{url_for('posts.index')}}">Home</a>
+					{% endif %}
+						<span class="badge">({{posts.items|length}})</span>
+				</h4>
+			</div>
+			<div class="col-md-6">
+				<select id="cd-dropdown" name="cd-dropdown" class="cd-select">
+					<option value="-1" selected>Categories</option>
+					<option value="1"><i class="fa fa-rocket"></i>Monkey</option>
+					<option value="2"><i class="fa fa-rocket"></i>Bear</option>
+					<option value="3"><i class="fa fa-rocket"></i>Squirrel</option>
+					<option value="4"><i class="fa fa-rocket"></i> Elephant</option>
+				</select>
+			</div>
+		</div>
 
 		{% for post in posts.items %}
 		<div class="row post-index-item {{ loop.cycle('odd', 'even') }}">
